# poma

./: .env_demo  .gitignore  163.172.136.239  Caddyfile  Caddyfile.dev  Caddyfile.prod  README.md  admin_pb2.py  common_pb2.py  custom_dim_pb2.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  indexing_pb2.py  manage.py  proto.sh  pyproject.toml  services_pb2.py  services_pb2_grpc.py  serving_pb2.py  status_pb2.py
app/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
app/management/commands/: slack_bot.py
app/migrations/: 0001_initial.py  0002_workspace_google_client_id_and_more.py  0003_workspace_google_active.py  0004_document_identifier_document_title.py  0005_rename_word_count_document_size.py  0006_remove_section_link_section_section_id.py  0007_workspace_corpus_id.py  0008_section_text.py  0009_workspace_slack_active_workspace_slack_client_id_and_more.py  0010_slackchannel.py  0011_slackbot_slackinstallation_slackoauthstate_and_more.py  0012_remove_workspace_slack_client_id_and_more.py
app/templates/app/: email_sent.html  home.html  register.html  search-failed.html  search-result.html  (+1 more)
poma/: asgi.py  celery.py  settings.py  sitemaps.py  urls.py  wsgi.py
poma/search/: openai.py  semantic.py
poma/sources/: gdrive.py  nango.py  slack.py  slack_datastores.py
templates/: base.html  confirm_template.html
templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
theme/static_src/: tailwind.config.js
(+2 files in other folders)
